// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EditCard matches snapshot when editing 1`] = `
<form
  className="EditCard-sc-1kvvj32-0 iFPiln"
  data-analytics-region="edit-note"
>
  <div
    mock-color-picker={true}
    onChange={[Function]}
    onRemove={[Function]}
  />
  <div
    mock-note={true}
    note="asdf"
    onChange={[Function]}
    onFocus={[Function]}
  />
  <div
    className="Button__ButtonGroup-ayg7nk-1 fJPuTt"
  >
    <button
      className="Button-ayg7nk-0 bXETKb"
      data-analytics-label="save"
      data-testid="save"
      onClick={[Function]}
    >
      Save
    </button>
    <button
      className="Button-ayg7nk-0 kWlfWJ"
      data-analytics-label="cancel"
      data-testid="cancel"
      onClick={[Function]}
    >
      Cancel
    </button>
  </div>
  <div
    confirmLink="/accounts/login?r=/"
    confirmMessage="i18n:highlighting:login:link"
    data-analytics-label="login"
    data-analytics-region="highlighting-login"
    message="i18n:highlighting:login:prompt"
    mock-confirmation={true}
    onCancel={[MockFunction]}
  />
</form>
`;

exports[`EditCard matches snapshot when focused 1`] = `
<form
  className="EditCard-sc-1kvvj32-0 iFPiln"
  data-analytics-region="edit-note"
>
  <div
    color="yellow"
    mock-color-picker={true}
    onChange={[Function]}
    onRemove={[Function]}
  />
  <div
    mock-note={true}
    note=""
    onChange={[Function]}
    onFocus={[Function]}
  />
  <div
    confirmLink="/accounts/login?r=/"
    confirmMessage="i18n:highlighting:login:link"
    data-analytics-label="login"
    data-analytics-region="highlighting-login"
    message="i18n:highlighting:login:prompt"
    mock-confirmation={true}
    onCancel={[MockFunction]}
  />
</form>
`;

exports[`EditCard matches snapshot with data 1`] = `
<form
  className="EditCard-sc-1kvvj32-0 iFPiln"
  data-analytics-region="edit-note"
>
  <div
    mock-color-picker={true}
    onChange={[Function]}
    onRemove={[Function]}
  />
  <div
    mock-note={true}
    note=""
    onChange={[Function]}
    onFocus={[Function]}
  />
  <div
    confirmLink="/accounts/login?r=/"
    confirmMessage="i18n:highlighting:login:link"
    data-analytics-label="login"
    data-analytics-region="highlighting-login"
    message="i18n:highlighting:login:prompt"
    mock-confirmation={true}
    onCancel={[MockFunction]}
  />
</form>
`;

exports[`EditCard matches snapshot without data 1`] = `
<form
  className="EditCard-sc-1kvvj32-0 iFPiln"
  data-analytics-region="edit-note"
>
  <div
    mock-color-picker={true}
    onChange={[Function]}
    onRemove={[Function]}
  />
  <div
    mock-note={true}
    note=""
    onChange={[Function]}
    onFocus={[Function]}
  />
  <div
    confirmLink="/accounts/login?r=/"
    confirmMessage="i18n:highlighting:login:link"
    data-analytics-label="login"
    data-analytics-region="highlighting-login"
    message="i18n:highlighting:login:prompt"
    mock-confirmation={true}
    onCancel={[MockFunction]}
  />
</form>
`;
